tests/fail/ClassDeclaration.java
package fail;

public class ClassDeclaration {
    int a = 5;
    private static int b = 1;
    
    static {
        x = 0.0;
        b = 3;
    }
}
